2006-07-13  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: gmmproc appendix: Corrected the description of 
	the _DEFS() macro, and mention not to include C headers in C++ headers.

2006-07-12  Marko Anastasov <marko@marko.anastasov.name>

	* docs/tutorial/gtkmm-tut.xml: Added a chapter about printing.

2006-07-12  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Added an appendix about wrapping C libraries with 
	gmmproc, including the various things you need to change when copying an 
	existing project.

2006-07-10  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/index.html: update to match the style of the new website a bit
	* docs/tutorial/style.css: change the style of the tutorial slightly to
	match the website style.  These are just minor tweaks.  Ideally I think they
	should both get a bit more of an overhaul.

2006-07-09  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* .cvsignore: add a whole bunch of files to .cvsignore

2006-07-09  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* examples/*: Don't include <gtkmm.h> if possible.  Modified all examples to
	only include the headers that they absolutely need.  Hopefully this speeds
	up compilation at least slightly and reduces the amount of recompilation
	needed for examples due to unrelated changes.

2006-07-08  Marko Anastasov <marko@marko.anastasov.name>

	* examples/book/printing/simple/examplewindow.cc:
	* examples/book/printing/simple/main.cc:
	* examples/book/printing/simple/printformoperation.cc:
	Minor code cleanup to fit the tutorial.

2006-07-08  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/entrycompletion.hg:
	* gtk/src/iconview.hg:
	* gtk/src/treeviewcolumn.hg: Added TODOs to mention new bases clases 
	(interfaces that these GTypes now implement) that we may not add as 
	base classes without breaking C++ ABI. 

2006-07-08  Murray Cumming  <murrayc@murrayc.com>
