@@ -194,7 +194,7 @@ applications and libraries:
     Recent versions of &gtkmm; are packaged by nearly every major Linux
     distribution these days.  So, if you use Linux, you can probably get
     started with &gtkmm; by installing the package from the official repository
-    for your distribution.  Distributions that include gtkmm in their
+    for your distribution.  Distributions that include &gtkmm; in their
     repositories include Debian, Ubuntu, Red Hat, Fedora, Mandriva, Suse, and
     many others.
 </para>
@@ -279,7 +279,7 @@ be downloaded from <ulink url="http://www.gtkmm.org/"></ulink>.
 
 <sect1 id="sec-packages_windows">
 <title>Microsoft Windows</title>
-<para>GTK+ and gtkmm were designed to work well with Microsoft Windows, and the developers encourage its use on the win32 platform.  However, Windows has no standard installation system for development libraries. Please see the <link linkend="sec-windows-installation">Windows Installation</link>
+<para>GTK+ and &gtkmm; were designed to work well with Microsoft Windows, and the developers encourage its use on the win32 platform.  However, Windows has no standard installation system for development libraries. Please see the <link linkend="sec-windows-installation">Windows Installation</link>
 appendix for Windows-specific installation instructions and notes.</para>
 </sect1>
 
@@ -3524,7 +3524,7 @@ you should add them to the <classname>TagTable</classname>. For instance:
 <programlisting>
 Glib::RefPtr&lt;Gtk::TextBuffer::TagTable&gt; refTagTable = Gtk::TextBuffer::TagTable::create();
 refTagTable-&gt;add(refTagMatch);
-Glib::RefPtr&lt;Gtk::TextBuffer&gt; refBuffer = Gtk::TextBuffer::create(refTagTable); //Hopefully a future version of gtkmm will have a set_tag_table() method, for use after creation of the buffer.
+Glib::RefPtr&lt;Gtk::TextBuffer&gt; refBuffer = Gtk::TextBuffer::create(refTagTable); //Hopefully a future version of &gtkmm; will have a set_tag_table() method, for use after creation of the buffer.
 </programlisting>
 </para>
 
@@ -5250,10 +5250,8 @@ type.
 <title>Printing</title>
 
 <para>
-At the application development level, the native printing functionality
-provides dialogs that look the same as in other applications and shares
-a common drawing API with Cairo, with Pango-driven text rendering. Underneith,
-printer-specific drivers and platform-specific backends are used.
+At the application development level, &gtkmm;'s printing API
+provides dialogs that are consistent across applications and allows us of Cairo's common drawing API, with Pango-driven text rendering. In the implementation of this common API, platform-specific backends and printer-specific drivers are used.
 </para>
 
 <sect1 id="sec-printoperation">
@@ -5261,7 +5259,7 @@ printer-specific drivers and platform-specific backends are used.
 
 <para>
 The primary object is <classname>Gtk::PrintOperation</classname>, allocated
-for each print operation. To handle page drawing, connect to its signals,
+for each print operation. To handle page drawing connect to its signals,
 or inherit from it and override the default virtual signal handlers.
 <classname>PrintOperation</classname> automatically handles all the settings
 affecting the print loop.
@@ -5271,24 +5269,24 @@ affecting the print loop.
 <title>Signals</title>
 
 <para>
-<function>PrintOperation::run()</function> method starts the print loop
+The <function>PrintOperation::run()</function> method starts the print loop, 
 during which various signals are emitted:
 
 <itemizedlist>
   <listitem>
     <para>
       <literal>begin_print</literal>:
-      It is necessary to handle this signal. This is where you
+      You must handle this signal, because this is where you
       create and set up a <classname>Pango::Layout</classname> using the
       provided <classname>Gtk::PrintContext</classname>, and break up your
-      printing material into pages.
+      printing output into pages.
     </para>
   </listitem>
 
   <listitem>
     <para>
-      <literal>paginate</literal>: Pagination is potentially slow, so if you
-      need to monitor it, you can call the
+      <literal>paginate</literal>: Pagination is potentially slow so if you
+      need to monitor it you can call the
       <function>PrintOperation::set_show_progress()</function> method and
       handle this signal.
     </para>
@@ -5310,12 +5308,11 @@ during which various signals are emitted:
 
 	<listitem>
 	  <para>
-	    <literal>draw_page</literal>: The second signal which is
-	    necessary to handle. Provides a
+	    <literal>draw_page</literal>: You must handle this signal, which provides a
 	    <classname>PrintContext</classname> and a page number.
-	    The <classname>PrintContext</classname> is used here
-	    to create a <classname>Cairo::Context</classname> over which
-	    the provided page is to be drawn. To render text, iterate over
+	    The <classname>PrintContext</classname> should be used 
+	    to create a <classname>Cairo::Context</classname> into which
+	    the provided page should be drawn. To render text, iterate over
 	    the <classname>Pango::Layout</classname> you created in the
 	    <literal>begin_print</literal> handler.
 	  </para>
@@ -5333,9 +5330,9 @@ during which various signals are emitted:
 
   <listitem>
     <para>
-      <literal>done</literal>: Printing is considered to be done when the
-      print data is spooled. Note that the provided
-      <literal>Gtk::PrintOperationResult</literal> may also indicate that
+      <literal>done</literal>: This signal is emitted when printing is finished, meaning when the
+      print data is spooled. Note that the provided 
+      <literal>Gtk::PrintOperationResult</literal> may indicate that
       an error occurred. In any case you probably want to notify the user
       about the final status.
     </para>
@@ -5344,7 +5341,7 @@ during which various signals are emitted:
   <listitem>
     <para>
       <literal>status_changed</literal>: Emitted whenever a print job's
-      status changes, until it's finished. Call
+      status changes, until it is finished. Call the 
       <function>PrintOperation::set_track_print_status()</function> method to
       monitor the job status after spooling. To see the status, use
       <function>get_status()</function> or
@@ -5367,7 +5364,7 @@ during which various signals are emitted:
 <title>Page setup</title>
 
 <para>
-<classname>PrintOperation</classname> has a method
+The <classname>PrintOperation</classname> class has a method called 
 <function>set_default_page_setup()</function> which selects the default
 paper size, orientation and margins. To show a page setup dialog from your
 application, use the <function>Gtk::run_page_setup_dialog()</function> method,
@@ -5376,19 +5373,23 @@ settings. Use this object to update a <classname>PrintOperation</classname>
 and to access the selected <classname>Gtk::PaperSize</classname>,
 <literal>Gtk::PageOrientation</literal> and printer-specific margins:
 </para>
+<para>You should save the chosen <classname>Gtk::PageSetup</classname> so you can 
+use it again if the page setup dialog is shown again.</para>
 
+<para>For instance,
 <programlisting>
 //Within a class that inherits from Gtk::Window and keeps m_refPageSetup and m_refSettings as members...
 Glib::RefPtr&lt;Gtk::PageSetup&gt; new_page_setup = Gtk::run_page_setup_dialog(*this, m_refPageSetup, m_refSettings);
 m_refPageSetup = new_page_setup;
 </programlisting>
+</para>
 
 <para>
 The Cairo coordinate system, in the <literal>draw_page</literal> handler,
 is automatically rotated to the current page orientation. It is normally
-within the printer margins, but you can change that via
+within the printer margins, but you can change that via the 
 <function>PrintOperation::set_use_full_page()</function>
-method. Default measurement unit is in device pixels. To select other units,
+method. The default measurement unit is device pixels. To select other units,
 use the <function>PrintOperation::set_unit()</function> method.
 </para>
 
@@ -5399,14 +5400,14 @@ use the <function>PrintOperation::set_unit()</function> method.
 
 <para>
 Text rendering is done using Pango.
-<classname>Pango::Layout</classname> for printing is created by calling
+The <classname>Pango::Layout</classname> object for printing should be created by calling
 the <function>PrintContext::create_pango_layout()</function> method.
-<classname>PrintContext</classname> also provides the page metrics,
+The <classname>PrintContext</classname> object also provides the page metrics,
 via <function>get_width()</function> and <function>get_height()</function>.
-The number of pages is set with
+The number of pages can be set with
 <function>PrintOperation::set_n_pages()</function>. To actually render the
-set up Pango text in <literal>on_draw_page</literal>, get a
-<classname>Cairo::Context</classname> with
+ Pango text in <literal>on_draw_page</literal>, get a
+<classname>Cairo::Context</classname> with 
 <function>PrintContext::get_cairo_context()</function> and show the
 <classname>Pango::LayoutLine</classname>s that appear within the requested
 page number.
@@ -5414,7 +5415,7 @@ page number.
 
 <para>
 See <link linkend="sec-printing_example-simple">an example</link>
-for how exactly this can be done.
+of exactly how this can be done.
 </para>
 
 </sect1>
@@ -5426,7 +5427,7 @@ for how exactly this can be done.
 By default, <function>PrintOperation::run()</function> returns when a print
 operation is completed. If you need to run a non-blocking print operation,
 call <function>PrintOperation::set_allow_async()</function>. Note that <function>set_allow_async()</function> is not supported
-on all platforms, however done will still be emitted.
+on all platforms, however the <literal>done</literal> signal will still be emitted.
 </para>
 
 <para>
@@ -5434,7 +5435,9 @@ on all platforms, however done will still be emitted.
 <literal>PRINT_OPERATION_RESULT_IN_PROGRESS</literal>. To track status
 and handle the result or error you need to implement signal handlers for
 the <literal>done</literal> and <literal>status_changed</literal> signals:
+</para>
 
+<para>For instance,
 <programlisting>
 // in class ExampleWindow's method...
 Glib::RefPtr&lt;PrintOperation&gt; op = PrintOperation::create();
@@ -5442,9 +5445,9 @@ Glib::RefPtr&lt;PrintOperation&gt; op = PrintOperation::create();
 op->signal_done().connect(sigc::bind(sigc::mem_fun(*this, &amp;ExampleWindow::on_printoperation_done), op));
 // run the op
 </programlisting>
+</para>
 
-Second, check for error and connect to <literal>status_changed</literal>:
-
+<para>Second, check for an error and connect to the <literal>status_changed</literal> signal. For instance:
 <programlisting>
 void ExampleWindow::on_printoperation_done(Gtk::PrintOperationResult result, const Glib::RefPtr&lt;PrintOperation&gt;&amp; op)
 {
@@ -5459,9 +5462,9 @@ void ExampleWindow::on_printoperation_done(Gtk::PrintOperationResult result, con
   }
 }
 </programlisting>
+</para>
 
-Finally, watch the status:
-
+<para>Finally, check the status. For instance,
 <programlisting>
 void ExampleWindow::on_printoperation_status_changed(const Glib::RefPtr&lt;PrintFormOperation&gt;&amp; op)
 {
@@ -5473,7 +5476,6 @@ void ExampleWindow::on_printoperation_status_changed(const Glib::RefPtr&lt;Print
   //update UI
 }
 </programlisting>
-
 </para>
 
 </sect1>
@@ -5481,9 +5483,7 @@ void ExampleWindow::on_printoperation_status_changed(const Glib::RefPtr&lt;Print
 <sect1 id="sec-export_to_pdf">
 <title>Export to PDF</title>
 <para>
-'Print to file' option is available in the print dialog, invisible to the
-application. However, it is sometimes useful to generate a pdf file directly
-from code:
+The 'Print to file' option is available in the print dialog, without the need for extra implementation. However, it is sometimes useful to generate a pdf file directly from code. For instance,
 
 <programlisting>
 Glib::RefPtr&lt;Gtk::PrintOperation&gt; op = Gtk::PrintOperation::create();
@@ -5500,7 +5500,7 @@ Gtk::PrintOperationResult res = op-&gt;run(Gtk::PRINT_OPERATION_ACTION_EXPORT);
 <title>Extending the print dialog</title>
 
 <para>
-It is possible to add a custom tab to the print dialog:
+You may add a custom tab to the print dialog:
 
 <itemizedlist>
   <listitem>
@@ -5523,25 +5523,25 @@ It is possible to add a custom tab to the print dialog:
 </para>
 
 <para>
-Although <literal>custom_widget_apply</literal> returns you the widget you
+Although teh <literal>custom_widget_apply</literal> signal provides the widget you
 previously created, to simplify things you can keep the widgets you expect
 to contain some user input as class members. For example, let's say you have
 a <classname>Gtk::Entry</classname> called <literal>m_Entry</literal> as
-a member of <classname>CustomPrintOperation</classname> class:
+a member of your <classname>CustomPrintOperation</classname> class:
 
 <programlisting>
 Gtk::Widget* CustomPrintOperation::on_create_custom_widget()
 {
-  set_custom_tab_label(&lt;My custom tab&gt;);
+  set_custom_tab_label(&quot;My custom tab&quot;);
 
   Gtk::HBox* hbox = new Gtk::HBox(false, 8);
-  hbox->set_border_width(6);
+  hbox-&gt;set_border_width(6);
 
   Gtk::Label* label = Gtk::manage(new Gtk::Label("Enter some text: "));
-  hbox->pack_start(*label, false, false);
-  label->show();
+  hbox-&gt;pack_start(*label, false, false);
+  label-&gt;show();
 
-  hbox->pack_start(m_Entry, false, false);
+  hbox-&gt;pack_start(m_Entry, false, false);
   m_Entry.show();
 
   return hbox;
@@ -5562,22 +5562,21 @@ void CustomPrintOperation::on_custom_widget_apply(Gtk::Widget* /* widget */)
 <title>Preview</title>
 
 <para>
-The native GTK+ print dialog has a preview button. It is possible to start
+The native GTK+ print dialog has a preview button, but you may also start
 a preview directly from an application:
 
 <programlisting>
 // in a class that inherits from Gtk::Window...
 Glib::RefPtr&lt;PrintOperation&gt; op = PrintOperation::create();
 // ...set up op...
-op->run(PRINT_OPERATION_ACTION_PREVIEW, *this);
+op->run(Gtk::PRINT_OPERATION_ACTION_PREVIEW, *this);
 </programlisting>
 </para>
 
 <para>
-On Unix, default preview handler uses an external viewer program. On Windows,
-native preview dialog will be invoked. If necessary it is possible to override
-this behaviour and provide a custom preview dialog. See &quot;advanced&quot;
-example for how to do this. TODO - create a link
+On Unix, the default preview handler uses an external viewer program. On Windows,
+the native preview dialog will be shown. If necessary you may override
+this behaviour and provide a custom preview dialog. See the &quot;advanced&quot; printing example.
 </para>
 
 </sect1>
@@ -5933,7 +5932,7 @@ widget will be destroyed whenever its container is destroyed.
 <title>Dynamic allocation with manage() and add()</title>
 
 <para>
-&gtkmm; provides the <function>manage()</function> and
+&gtkmm; provides the <function>manage()</function> function and
 <function>add()</function> methods to create and destroy widgets.  Every widget
 except a top-level window must be added or packed into a container in order to
 be displayed.  The <function>manage()</function> function marks a packed widget
