@@ -1,5 +1,10 @@
 2006-07-13  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/tutorial/gtkmm-tut.xml: Minor corrections to the language in the 
+	new printing chapter.
+
+2006-07-13  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/tutorial/gtkmm-tut.xml: gmmproc appendix: Corrected the description of 
 	the _DEFS() macro, and mention not to include C headers in C++ headers.
 
